--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 version: '3.5'
 services:
-  client:
-    build:
-      context: ./
-      dockerfile: Dockerfile
+  client1:
+    image: ifigurin12/react-integral:first
     ports:
       - "3000:3000"
+
+  client2:
+    image: ifigurin12/reac-integ:tagname
+    ports:
+      - "3001:3000"
